--- a/production/default.conf
+++ b/production/default.conf
@@ -1,5 +1,5 @@
-upstream backend-hoidanit {
-        server backend:8000;
+upstream backend-trungdd {
+        server backend:8080;
 }
 
 server {
@@ -16,7 +16,7 @@ server {
     }
 
     location /api {
-        proxy_pass http://backend-hoidanit;
+        proxy_pass http://backend-trungdd;
         
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
