--- a/BE_docker_demo/package.json
+++ b/BE_docker_demo/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --exec babel-node src/server.js",
     "build-src": "babel src -d build --copy-files",
-    "build": "node build/server.js"
+    "build": "node build/server.js",
+    "db-update": "sequelize-cli db:migrate && sequelize-cli db:seed:all"
   },
   "keywords": [
     "fullstack",
