--- a/production/docker-compose.yaml
+++ b/production/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
     image: mysql:8.0
     restart: always
     environment:
-      - MYSQL_DATABASE=hoidanit
+      - MYSQL_DATABASE=trungdd
       - MYSQL_ROOT_PASSWORD=123456
     ports:
       - '3307:3306'
